[project]
name = "pdf-extract-kit"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ivan94", email = "carney520@hotmail.com" }]
dependencies = [
    "PyMuPDF",
    "matplotlib",
    "paddleocr==2.7.3",
    "paddlepaddle-gpu==2.6.1",
    "ultralytics",
    "unimernet",
    "detectron2==0.6+pt2.3.1cu121",
    # "paddlepaddle==2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.uv]
override-dependencies = ["pillow==8.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "detectron2"
url = "https://miropsota.github.io/torch_packages_builder"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_extract_kit"]
